--- a/CursoFirebaseLite/gradle/libs.versions.toml
+++ b/CursoFirebaseLite/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ composeBom = "2025.08.00"
 firebaseBom = "34.1.0"
 services = "4.4.3"
 crashlytics = "3.0.6"
+navigationCompose = "2.9.3"
 
 
 [libraries]
@@ -31,6 +32,8 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
+firebase-auth = { module = "com.google.firebase:firebase-auth-ktx" }
+androidx-navigation-compose = {module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
