CREATE SCREENS SPOTIFY

--- a/CursoFirebaseLite/gradle/libs.versions.toml
+++ b/CursoFirebaseLite/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ firebaseBom = "34.1.0"
 services = "4.4.3"
 crashlytics = "3.0.6"
 navigationCompose = "2.9.3"
+kotlinSerialization = "1.9.0"
 
 
 [libraries]
@@ -32,8 +33,11 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
-firebase-auth = { module = "com.google.firebase:firebase-auth-ktx" }
+firebase-auth = { module = "com.google.firebase:firebase-auth" }
+
 androidx-navigation-compose = {module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinSerialization" }
+androidx-lifecycle-viewmodel-ktx = {module = "androidx.lifecycle:lifecycle-viewmodel-ktx" ,version.ref = "lifecycleRuntimeKtx"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -41,3 +45,4 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 googleServices = { id = "com.google.gms.google-services", version.ref = "services" }
 crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "crashlytics" }
+jetbrainsKotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
