--- a/CursoFirebaseLite/gradle/libs.versions.toml
+++ b/CursoFirebaseLite/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ services = "4.4.3"
 crashlytics = "3.0.6"
 navigationCompose = "2.9.3"
 kotlinSerialization = "1.9.0"
+coil = "2.7.0"
 
 
 [libraries]
@@ -35,6 +36,8 @@ firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "fir
 firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
 firebase-firestore = { module = "com.google.firebase:firebase-firestore" }
+
+coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 
 androidx-navigation-compose = {module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinSerialization" }
